change a little bit

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Site title -->
-    <title>Hamar | Personal Portfolio Template</title>
+    <title>Mario Apra | Personal WebSite</title>
 
 
     <!-- Fonts -->
@@ -106,9 +106,9 @@
             <div class="table-cell">
                     <!-- Caption starts -->
                     <div class="col-md-8 col-md-offset-2 caption">
-                        <h4>Hello, This is Hamar</h4>
-                        <h1>Desktop Software Engineer</h1>
-                        <a class="btn dark smooth_scroll" href="#work">View work</a>
+                        <h2>Hello, This is Mário Aprá</h2>
+                        <h1>Software Engineer</h1>
+                        <a class="btn dark smooth_scroll" href="#work">View works</a>
                         <a class="btn smooth_scroll" href="#contact">Contact Me</a>
                     </div>
                     <!-- Caption ends -->
