--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div class="mainmenu">
                         <div class="navbar navbar-nobg">
                             <div class="navbar-header">
-                                <a class="navbar-brand" href="index.html">Hamar</a>
+                                <a class="navbar-brand" href="index.html">Mário Aprá</a>
                                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                                     <span class="sr-only">Toggle navigation</span>
                                     <span class="icon-bar"></span>
@@ -106,7 +106,7 @@
             <div class="table-cell">
                     <!-- Caption starts -->
                     <div class="col-md-8 col-md-offset-2 caption">
-                        <h2>Hello, This is Mário Aprá</h2>
+                        <h4>Hello, This is Mário Aprá</h4>
                         <h1>Software Engineer</h1>
                         <a class="btn dark smooth_scroll" href="#work">View works</a>
                         <a class="btn smooth_scroll" href="#contact">Contact Me</a>
@@ -127,7 +127,7 @@
                 <div class="col-md-12 text-center">
                     <div class="section-title">
                         <h2>ABOUT ME</h2>
-                        <p>Coderspoint has everything you need to get your new website up and running in no time all of the templates and themes.</p>
+                        <p></p>
                     </div>
                 </div>
             </div>
@@ -144,7 +144,7 @@
                 <!-- About Text -->
                 <div class="col-md-6">
                     <div class="about-text">
-                        <h4>Aman Ullah</h4>       
+                        <h4>Mário Aprá</h4>       
                         <p>Coderspoint has everything you need to get your new website up and running in no time! All of the templates and themes on Coderspoint w3c valid error free code and easy to use. Coderspoint has everything you need to get your new website up and running in no time! All of the templates and themes on Coderspoint w3c valid error free code and easy to use. Coderspoint has everything you need to get your new website up and running in no time! Coderspoint w3c valid error free code and easy to use. All of the templates and themes on Coderspoint w3c valid error free code and easy to use.</p>
 
                         <a class="btn dark smooth_scroll" href="#contact">Hire Me Now</a>
