--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <div class="col-md-6">
                     <div class="about-text">
                         <h4>Mário Aprá</h4>       
-                        <p>Coderspoint has everything you need to get your new website up and running in no time! All of the templates and themes on Coderspoint w3c valid error free code and easy to use. Coderspoint has everything you need to get your new website up and running in no time! All of the templates and themes on Coderspoint w3c valid error free code and easy to use. Coderspoint has everything you need to get your new website up and running in no time! Coderspoint w3c valid error free code and easy to use. All of the templates and themes on Coderspoint w3c valid error free code and easy to use.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et ille ridens: Video, inquit, quid agas; Quae cum essent dicta, discessimus. Pauca mutat vel plura sane; Sed tamen omne, quod de re bona dilucide dicitur, mihi praeclare dici videtur. Nos autem non solum beatae vitae istam esse oblectationem videmus, sed etiam levamentum miseriarum. Cum enim summum bonum in voluptate ponat, negat infinito tempore aetatis voluptatem fieri maiorem quam finito atque modico.</p>
 
                         <a class="btn dark smooth_scroll" href="#contact">Hire Me Now</a>
 
@@ -165,7 +165,7 @@
                 <div class="col-md-12 text-center">
                     <div class="section-title">
                         <h2>MY SERVICES</h2>
-                        <p>Coderspoint has everything you need to get your new website up and running in no time all of the templates and themes.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Multoque hoc melius nos veriusque quam Stoici. Quae contraria sunt his, malane? Respondeat totidem verbis. Perge porro; Immo videri fortasse. Cur, nisi quod turpis oratio est?</p>
                     </div>
                 </div>
             </div>
@@ -177,7 +177,7 @@
                     <div class="single-service">
                         <i class="fa fa-star-o"></i>
                         <h3>Unique design</h3>
-                        <p>Coderspoint has everything you need to get your new website up and running in no time all of the themes.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Rationis enim perfectio est virtus; Hoc simile tandem est? Duo Reges: constructio interrete. Inde igitur, inquit, ordiendum est. Rhetorice igitur, inquam, nos mavis quam dialectice disputare? Magna laus. Dicimus aliquem hilare vivere; Istic sum, inquit.</p>
                     </div>
                 </div>
                 <!-- /Service Item -->
@@ -187,7 +187,7 @@
                     <div class="single-service">
                         <i class="fa fa-sliders"></i>
                         <h3>Easy to customize</h3>
-                        <p>Coderspoint has everything you need to get your new website up and running in no time all of the themes.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quod ea non occurrentia fingunt, vincunt Aristonem; Bonum integritas corporis: misera debilitas. Confecta res esset. Hoc non est positum in nostra actione. Duo Reges: constructio interrete. Easdemne res?</p>
                     </div>
                 </div>
                 <!-- /Service Item -->
@@ -197,7 +197,7 @@
                     <div class="single-service">
                         <i class="fa fa-bolt"></i>
                         <h3>Fast loading</h3>
-                        <p>Coderspoint has everything you need to get your new website up and running in no time all of the themes.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tu quidem reddes; Quare conare, quaeso. Que Manilium, ab iisque M. Tria genera bonorum; Ut aliquid scire se gaudeant? Id enim natura desiderat.</p>
                     </div>
                 </div>
                 <!-- /Service Item -->
@@ -207,7 +207,7 @@
                     <div class="single-service">
                         <i class="fa fa-diamond"></i>
                         <h3>High quality</h3>
-                        <p>Coderspoint has everything you need to get your new website up and running in no time all of the themes.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Istic sum, inquit. Duo Reges: constructio interrete. Comprehensum, quod cognitum non habet? Egone quaeris, inquit, quid sentiam? Rationis enim perfectio est virtus; Non potes, nisi retexueris illa.</p>
                     </div>
                 </div>
                 <!-- /Service Item -->
@@ -217,7 +217,7 @@
                     <div class="single-service">
                         <i class="fa fa-support"></i>
                         <h3>24/7 Support</h3>
-                        <p>Coderspoint has everything you need to get your new website up and running in no time all of the themes.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Idemne, quod iucunde? Bonum integritas corporis: misera debilitas. Avaritiamne minuis? Duo Reges: constructio interrete. Ratio quidem vestra sic cogit.</p>
                     </div>
                 </div>
                 <!-- /Service Item -->
@@ -227,7 +227,7 @@
                     <div class="single-service">
                         <i class="fa fa-eye"></i>
                         <h3>Retina ready</h3>
-                        <p>Coderspoint has everything you need to get your new website up and running in no time all of the themes.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proclivi currit oratio. Istam voluptatem perpetuam quis potest praestare sapienti? Certe non potest. Quis est tam dissimile homini. Sed fortuna fortis; Duo Reges: constructio interrete. Ita prorsus, inquam; Cave putes quicquam esse verius.</p>
                     </div>
                 </div>
                 <!-- /Service Item -->
@@ -246,7 +246,7 @@
                 <div class="col-md-12 text-center">
                     <div class="section-title">
                         <h2>My Working Process</h2>
-                        <p>Coderspoint has everything you need to get your new website up and running in no time all of the templates and themes.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quo tandem modo? Negat enim summo bono afferre incrementum diem. Quod totum contra est. Duo Reges: constructio interrete.</p>
                     </div>
                 </div>
             </div>
@@ -292,7 +292,7 @@
                 <div class="col-md-12 text-center">
                     <div class="section-title">
                         <h2>MY WORKS</h2>
-                        <p>Coderspoint has everything you need to get your new website up and running in no time all of the templates and themes.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quo tandem modo? Negat enim summo bono afferre incrementum diem. Quod totum contra est. Duo Reges: constructio interrete.</p>
                     </div>
                 </div>
             </div>
@@ -451,7 +451,7 @@
                 <div class="col-md-12 text-center">
                     <div class="section-title">
                         <h2>GET IN TOUCH</h2>
-                        <p>Coderspoint has everything you need to get your new website up and running in no time all of the templates and themes.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quo tandem modo? Negat enim summo bono afferre incrementum diem. Quod totum contra est. Duo Reges: constructio interrete.</p>
                     </div>
                 </div>
             </div>
