--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                                         <li><a class="smooth_scroll" href="#work">Works</a></li>
                                         <li><a class="smooth_scroll" href="#testimonial">Quotes</a></li>
                                         <li><a class="smooth_scroll" href="#contact">Contact</a></li>
+                                        <li><a class="smooth_scroll" href="/CV">CV</a></li>
                                     </ul>
                                 </nav>
                             </div>
