write about education (miss cientific olympiads)

--- a/index.html
+++ b/index.html
@@ -147,6 +147,15 @@
                     <div class="about-text">
                         <h4>Mário Aprá</h4>       
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et ille ridens: Video, inquit, quid agas; Quae cum essent dicta, discessimus. Pauca mutat vel plura sane; Sed tamen omne, quod de re bona dilucide dicitur, mihi praeclare dici videtur. Nos autem non solum beatae vitae istam esse oblectationem videmus, sed etiam levamentum miseriarum. Cum enim summum bonum in voluptate ponat, negat infinito tempore aetatis voluptatem fieri maiorem quam finito atque modico.</p>
+                        <h2>Education</h2>
+                        <p>
+                            When I was 16 I moved to SP to take my High School Diploma.
+                            A year ago, I entered in Brazilian Army as a cadet and stayed for 2 years.
+                            After this, I taked time off and moved back to SP and started study System analysis.
+                            In the first semester there, I joined in a code jam team and we was the seccond best group at my College and top 20 from all of Technology Colleges.
+                            Then, in the seccond year, my group was the 6th from all.
+                            In 2016, my team could win the first Hackathon in SP Technology College with an amazing project: real-time subtitle to help deaf people and e-book creator to blind people.
+                        </p>
 
                         <a class="btn dark smooth_scroll" href="#contact">Hire Me Now</a>
 
