write about work

--- a/index.html
+++ b/index.html
@@ -157,6 +157,18 @@
                             In 2016, my team could win the first Hackathon in SP Technology College with an amazing project: real-time subtitle to help deaf people and e-book creator to blind people.
                         </p>
 
+                        <h2>Work Experience</h2>
+                        <p>
+                            I start work in IT in 2014 with database and in 2015 moved to Una Capital company.
+                            There I was in charge of all IT area, because I was alone.
+                            I was hired to create a database for the company, to organize their datas, create automated reports and do maintenance in their website.
+                            After this, I improoved the system with integrations using SOAP and REST (in Java and C#).
+                            In my last year there, I get Working Holiday Visa in New Zealand, so I decided to leave the company and I and one of their partner hired other person to do my job.
+                            To do that, I was responsable for filter candidates, apply some programming tests and for all this process.
+                            I teached this guy about finance market, because is from Una area, and implemented a SCRUM process to make softwares in this micro team.
+                            Also, I implemented some data extracting using Python, VBA and Java.
+                        </p>
+
                         <a class="btn dark smooth_scroll" href="#contact">Hire Me Now</a>
 
                     </div>
