start write about myself

--- a/index.html
+++ b/index.html
@@ -145,8 +145,13 @@
                 <!-- About Text -->
                 <div class="col-md-6">
                     <div class="about-text">
-                        <h4>Mário Aprá</h4>       
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et ille ridens: Video, inquit, quid agas; Quae cum essent dicta, discessimus. Pauca mutat vel plura sane; Sed tamen omne, quod de re bona dilucide dicitur, mihi praeclare dici videtur. Nos autem non solum beatae vitae istam esse oblectationem videmus, sed etiam levamentum miseriarum. Cum enim summum bonum in voluptate ponat, negat infinito tempore aetatis voluptatem fieri maiorem quam finito atque modico.</p>
+                        <h2>Who is Mario?</h2>
+                        <p>
+                            My name is Mário Aprá and I'm from Sao Paulo, Brazil. 
+                            I'm currently studying System analysis and development at Sao Paulo Technology College.
+                            I raised at Guaruja (coast from Sao Paulo), and I'm also surfer.
+                        </p>
+                        
                         <h2>Education</h2>
                         <p>
                             When I was 16 I moved to SP to take my High School Diploma.
