--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                         <li><a class="smooth_scroll" href="#work">Works</a></li>
                                         <li><a class="smooth_scroll" href="#testimonial">Quotes</a></li>
                                         <li><a class="smooth_scroll" href="#contact">Contact</a></li>
-                                        <li><a class="smooth_scroll" href="//mario-apra.tk/CV">Topic CV</a></li>
+                                        <li><a class="smooth_scroll" href="//mario-apra.tk/CV" target="_blank">Topic CV</a></li>
                                     </ul>
                                 </nav>
                             </div>
