fix layout from about me

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                         <li><a class="smooth_scroll" href="#work">Works</a></li>
                                         <li><a class="smooth_scroll" href="#testimonial">Quotes</a></li>
                                         <li><a class="smooth_scroll" href="#contact">Contact</a></li>
-                                        <li><a class="smooth_scroll" href="//mario-apra.tk/CV" target="_blank">Topic CV</a></li>
+                                        <!-- <li><a class="smooth_scroll" href="//mario-apra.tk/CV" target="_blank">Topic CV</a></li> -->
                                     </ul>
                                 </nav>
                             </div>
@@ -125,61 +125,98 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-md-12 text-center">
-                    <div class="section-title">
+                <div class="col-md-24 text-center section-title">
                         <h2>ABOUT ME</h2>
-                        <p></p>
-                    </div>
+                        <blockquote class="blockquote-reverse">
+                            <p>"If you can't do the little things right, you will never do the big things right."</p>
+                            <footer>William H. McRaven</footer>
+                        </blockquote>   
                 </div>
             </div>
 
+
+            <!-- Who is -->
             <div class="row">
 
-                <!-- About Image -->
+                 <!-- Image -->
                 <div class="col-md-6">
                     <div class="me-image">
-                        <img src="assets/img/about/about.jpg" alt="">
+                        <img src="assets/img/about/about.jpg" alt="me surfing image">
                     </div>
                 </div>
 
-                <!-- About Text -->
-                <div class="col-md-6">
-                    <div class="about-text">
-                        <h2>Who is Mario?</h2>
-                        <p>
-                            My name is Mário Aprá and I'm from Sao Paulo, Brazil. 
-                            I'm currently studying System analysis and development at Sao Paulo Technology College.
-                            I raised at Guaruja (coast from Sao Paulo), and I'm also surfer.
-                        </p>
-                        
-                        <h2>Education</h2>
-                        <p>
-                            When I was 16 I moved to SP to take my High School Diploma.
-                            A year ago, I entered in Brazilian Army as a cadet and stayed for 2 years.
-                            After this, I taked time off and moved back to SP and started study System analysis.
-                            In the first semester there, I joined in a code jam team and we was the seccond best group at my College and top 20 from all of Technology Colleges.
-                            Then, in the seccond year, my group was the 6th from all.
-                            In 2016, my team could win the first Hackathon in SP Technology College with an amazing project: real-time subtitle to help deaf people and e-book creator to blind people.
-                        </p>
-
-                        <h2>Work Experience</h2>
-                        <p>
-                            I start work in IT in 2014 with database and in 2015 moved to Una Capital company.
-                            There I was in charge of all IT area, because I was alone.
-                            I was hired to create a database for the company, to organize their datas, create automated reports and do maintenance in their website.
-                            After this, I improoved the system with integrations using SOAP and REST (in Java and C#).
-                            In my last year there, I get Working Holiday Visa in New Zealand, so I decided to leave the company and I and one of their partner hired other person to do my job.
-                            To do that, I was responsable for filter candidates, apply some programming tests and for all this process.
-                            I teached this guy about finance market, because is from Una area, and implemented a SCRUM process to make softwares in this micro team.
-                            Also, I implemented some data extracting using Python, VBA and Java.
-                        </p>
-
-                        <a class="btn dark smooth_scroll" href="#contact">Hire Me Now</a>
-
-                    </div>
+                <!-- Text -->
+                <div class="col-md-6 text-center">
+                    <h1>Who is Mario?</h1>
+                </div>
+                <div class="col-md-6 about-text">
+                    <p>
+                        My name is Mário Aprá and I'm from Sao Paulo, Brazil. 
+                        I'm currently studying System analysis and development at Sao Paulo Technology College.
+                        I raised at Guaruja (coast from Sao Paulo).
+                        I'm an active person: in my life I was actor, circus performer, juggler, percussionist, body percussionist, singer, skater, military and actually I'm only surfer and coder.
+                    </p>
                 </div>
             </div>
 
+            <!-- Education -->
+            <div class="row">
+
+                 <!-- Image -->
+                <div class="col-md-6">
+                    <div class="me-image">
+                        <img src="assets/img/about/about.jpg" alt="me surfing image">
+                    </div>
+                </div>
+
+                <!-- Text -->
+                <div class="col-md-6 text-center">
+                    <h1>Education</h1>
+                </div>
+                <div class="col-md-6 about-text">
+                    <p>
+                        I always was stood out: with high grades, good performance in scientific competitions, fast and deep learning, self motivated and intelligence.
+                        In scientific competitions, I went to finals almost every time, I get merit honor at physics olympiad in 2009, even without physics class in my school.
+                        When I was 16 I moved to SP to take my High School Diploma.
+                        A year ago, I entered in Brazilian Army as a cadet and stayed for 2 years.
+                        After this, I taked time off and moved back to SP and started study System analysis.
+                        In the first semester there, I joined in a code jam team and we was the seccond best group at my College and top 20 from all of Technology Colleges.
+                        Then, in the seccond year, my group was the 6th from all.
+                        In 2016, my team could win the first Hackathon in SP Technology College with an amazing project: real-time subtitle to help deaf people and e-book creator to blind people.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Work -->
+            <div class="row">
+
+                 <!-- Image -->
+                <div class="col-md-6">
+                    <div class="me-image">
+                        <img src="assets/img/about/about.jpg" alt="me surfing image">
+                    </div>
+                </div>
+
+                <!-- Text -->
+                <div class="col-md-6 text-center">
+                    <h1>Work Experience</h1>
+                </div>
+                <div class="col-md-6 about-text">
+                    <p>
+                        I start work in IT in 2014 with database and in 2015 moved to Una Capital company.
+                        There I was in charge of all IT area, because I was alone.
+                        I was hired to create a database for the company, to organize their datas, create automated reports and do maintenance in their website.
+                        After this, I improoved the system with integrations using SOAP and REST (in Java and C#).
+                        In my last year there, I get Working Holiday Visa in New Zealand, so I decided to leave the company and I and one of their partner hired other person to do my job.
+                        To do that, I was responsable for filter candidates, apply some programming tests and for all this process.
+                        I teached this guy about finance market, because is from Una area, and implemented a SCRUM process to make softwares in this micro team.
+                        Also, I implemented some data extracting using Python, VBA and Java.
+                    </p>
+                    <p>
+                        <a class="btn dark smooth_scroll" href="#contact">Hire Me Now</a>
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
     <!-- About area ends -->
