--- a/donation/index.html
+++ b/donation/index.html
@@ -5,7 +5,7 @@
   <title>Interactive Donation UI Concept</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
-  <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
+  <link rel='stylesheet prefetch' href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
 
       <link rel="stylesheet" href="css/style.css">
 
@@ -87,13 +87,13 @@
           </div>
         </div>
         <div class="col-md-6 col-sm-6 col-lg-6 col-xs-12">
-          <h1>WE NEED YOUR HELP</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio eos, reprehenderit distinctio commodi magnam, eius mollitia, voluptas quasi quod architecto velit. Voluptatibus ex debitis quibusdam cumque. Cumque omnis, eos?</p>
+          <h1>SEJA UM REALIZADOR DE SONHOS</h1>
+          <p></p>
           <div class="range-container">
-            <h4>I wanna help with: <span class="value">$0</span></h4>
-            <input type="range" min="0" max="100" step="10"/>
+            <h4>Quero ajudar com: <span class="value">R$0</span></h4>
+            <input type="range" min="0" max="100" step="10" value="0"/>
           </div>
-          <a href="#infos" data-scroll id="donateBtn">Continue</a>
+          <a href="#infos" data-scroll id="donateBtn">DOAR</a>
         </div>
       </div>
     </div>
@@ -101,7 +101,7 @@
  </body>
   
 </html>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/smooth-scroll/10.2.1/js/smooth-scroll.min.js'></script>
+  <script src='//cdnjs.cloudflare.com/ajax/libs/smooth-scroll/10.2.1/js/smooth-scroll.min.js'></script>
 
     <script src="js/index.js"></script>
 
