remove unnecessary items

--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,900" rel="stylesheet">
 
     <!-- Bootstrap css -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
     <!--Font Awesome css -->
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Normalizer css -->
-    <link href="assets/css/normalize.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css" rel="stylesheet">
 
     <!-- Owl Carousel css -->
-    <link href="assets/css/owl.carousel.min.css" rel="stylesheet">
-    <link href="assets/css/owl.theme.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.theme.min.css" rel="stylesheet">
 
     <!-- Magnific popup css -->
-    <link href="assets/css/magnific-popup.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.css" rel="stylesheet">
 
     <!-- Animate css -->
-    <link href="assets/css/animate.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet">
 
     <!-- Site css -->
     <link href="assets/css/style.css" rel="stylesheet">
@@ -141,7 +141,7 @@
                  <!-- Image -->
                 <div class="col-md-6">
                     <div class="me-image">
-                        <img src="assets/img/about/about.jpg" alt="me surfing image">
+                        <img src="assets/img/about.jpg" alt="me surfing image">
                     </div>
                 </div>
 
@@ -165,7 +165,7 @@
                  <!-- Image -->
                 <div class="col-md-6">
                     <div class="me-image">
-                        <img src="assets/img/about/about.jpg" alt="me surfing image">
+                        <img src="assets/img/education.jpg" alt="me surfing image">
                     </div>
                 </div>
 
@@ -193,7 +193,7 @@
                  <!-- Image -->
                 <div class="col-md-6">
                     <div class="me-image">
-                        <img src="assets/img/about/about.jpg" alt="me surfing image">
+                        <img src="assets/img/work.png" alt="me surfing image">
                     </div>
                 </div>
 
@@ -599,19 +599,19 @@
 
 
     <!-- Latest jQuery -->
-    <script src="assets/js/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <!-- Bootstrap js-->
-    <script src="assets/js/bootstrap.min.js"></script>
-
+    <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
+<script src="https://npmcdn.com/bootstrap@4.0.0-alpha.5/dist/js/bootstrap.min.js"></script>
     <!-- Owl Carousel js -->
-    <script src="assets/js/owl.carousel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
 
     <!-- Mixitup js -->
-    <script src="assets/js/jquery.mixitup.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/2.1.11/jquery.mixitup.min.js"></script>
 
     <!-- Magnific popup js -->
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
 
     <!-- Main js-->
     <script src="assets/js/main_script.js"></script>
