--- a/index.html
+++ b/index.html
@@ -321,8 +321,8 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="section-title">
-                        <h2>GET IN TOUCH</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quo tandem modo? Negat enim summo bono afferre incrementum diem. Quod totum contra est. Duo Reges: constructio interrete.</p>
+                        <h2>CONTACT ME</h2>
+                        <p>If you liked my jobs, you can send me an email.</p>
                     </div>
                 </div>
             </div>
@@ -330,20 +330,19 @@
             <div class="row contact-row">
                 <div class="col-md-6">
 
-                    <!-- Contact form starts -->
                     <div class="contact-form">
 
                         <!-- Submition status -->
                         <div id="form-messages"></div>
 
-                        <form id="ajax-contact" action="assets/mailer.php" method="post">
+                        <!-- Contact form starts -->
+                        <form id="ajax-contact" action="http://formspree.io/mariotapra@gmail.com" method="POST">
 
-                            <div class="form-group in_name">
-                                <input type="text" name="name" class="form-control" id="name" placeholder="NAME" required="required">
-                            </div>
                             <div class="form-group in_email">
-                                <input type="email" name="email" class="form-control" id="email" placeholder="EMAIL" required="required">
+                                <input type="email" name="_replyto" class="form-control" id="email" placeholder="EMAIL" required="required">
                             </div>
+                            <input type="hidden" name="_subject" value="Contact Form - personal webpage" />
+                            <input type="text" name="_gotcha" style="display:none" />
                             <div class="form-group in_message"> 
                                 <textarea rows="5" name="message" class="form-control" id="message" placeholder="MESSAGE" required="required"></textarea>
                             </div>
