test contact form

--- a/index.html
+++ b/index.html
@@ -356,6 +356,21 @@
                 </div>
 
                 <div class="col-md-6">
+
+                    <div class="contact-form">
+                        <!-- Contact form starts -->
+                        <form action="https://formspree.io/mariotapra@gmail.com" method="POST">
+                            <input type="email" name="_replyto" class="form-control" id="email" placeholder="EMAIL" required="required">
+                            <input type="hidden" name="_subject" value="Contact Form - personal webpage" />
+                            <input type="text" name="_gotcha" style="display:none" />
+                            <textarea rows="5" name="message" class="form-control" id="message" placeholder="MESSAGE" required="required"></textarea>
+                            <input type="submit" value="Send Now" name="submit" id="submitButton" class="btn dark" title="Submit Your Message!">
+                        </form>
+                    </div>
+                    <!-- Contact form ends-->
+                </div>
+
+                <div class="col-md-6">
                     <ul class="contact-info">
                         <li>
                             <i class="fa fa-map-marker"></i>
