solve and test contact form

--- a/index.html
+++ b/index.html
@@ -331,33 +331,6 @@
                 <div class="col-md-6">
 
                     <div class="contact-form">
-
-                        <!-- Submition status -->
-                        <div id="form-messages"></div>
-
-                        <!-- Contact form starts -->
-                        <form id="ajax-contact" action="https://formspree.io/mariotapra@gmail.com" method="POST">
-
-                            <div class="form-group in_email">
-                                <input type="email" name="_replyto" class="form-control" id="email" placeholder="EMAIL" required="required">
-                            </div>
-                            <input type="hidden" name="_subject" value="Contact Form - personal webpage" />
-                            <input type="text" name="_gotcha" style="display:none" />
-                            <div class="form-group in_message"> 
-                                <textarea rows="5" name="message" class="form-control" id="message" placeholder="MESSAGE" required="required"></textarea>
-                            </div>
-
-                            <div class="actions">
-                                <input type="submit" value="Send Now" name="submit" id="submitButton" class="btn dark" title="Submit Your Message!">
-                            </div>
-                        </form>
-                    </div>
-                    <!-- Contact form ends-->
-                </div>
-
-                <div class="col-md-6">
-
-                    <div class="contact-form">
                         <!-- Contact form starts -->
                         <form action="https://formspree.io/mariotapra@gmail.com" method="POST">
                             <input type="email" name="_replyto" class="form-control" id="email" placeholder="EMAIL" required="required">
@@ -386,7 +359,7 @@
                         </li>
                         <li>
                             <i class="fa fa-globe"></i>
-                            <p>mario-apra.tk</p>
+                            <p>www.mario-apra.tk</p>
                         </li>
                     </ul>
                 </div>
