change some pics

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                  <!-- Image -->
                 <div class="col-md-6">
                     <div class="me-image">
-                        <img src="assets/img/about.jpg" alt="me surfing image">
+                        <img src="assets/img/myself.jpg" alt="me surfing image">
                     </div>
                 </div>
 
@@ -229,14 +229,14 @@
                 <div class="col-md-12 text-center">
                     <div class="section-title">
                         <h2>MY WORKS</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quo tandem modo? Negat enim summo bono afferre incrementum diem. Quod totum contra est. Duo Reges: constructio interrete.</p>
+                        <p>Here is a few projects that I'm proud</p>
                     </div>
                 </div>
             </div>
 
             <div class="row">
 
-                <!-- Works filter -->
+                <!-- Works filter ->
                 <ul class="work filters">
                     <li class="filter" data-filter="all">All</li>
                     <li class="filter" data-filter=".web">Web</li>
@@ -379,10 +379,10 @@
                 </div>
                 <div class="col-md-6 col-sm-6">
                     <ul class="social-links">
-                        <li><a href=""><i class="fa fa-facebook"></i></a></li>
-                        <li><a href=""><i class="fa fa-twitter"></i></a></li>
-                        <li><a href=""><i class="fa fa-google-plus"></i></a></li>
-                        <li><a href=""><i class="fa fa-youtube"></i></a></li>
+                        <li><a href="https://github.com/derrix060"><i class="fa fa-github"></i></a></li>
+                        <li><a href="http://stackoverflow.com/users/7487154/mario-apra"><i class="fa fa-stack-overflow"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/marioapra/"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href=""><i class="fa fa-linkedin"></i></a></li>
                         <li><a href=""><i class="fa fa-pinterest"></i></a></li>
                     </ul>
                 </div>                
