add images and works

--- a/index.html
+++ b/index.html
@@ -250,10 +250,11 @@
                 <div class="row work-items">
 
                     <!-- work item -->
-                    <div class="col-md-4 col-sm-6 mix web">
+                    <div class="col-md-6 col-lg-4 mix web app graphic">
                         <div class="item">
-                            <a href="https://images.pexels.com/photos/159731/pencil-education-pencil-sharpener-art-159731.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" class="work-popup">
-                                <img src="https://images.pexels.com/photos/159731/pencil-education-pencil-sharpener-art-159731.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" alt="">
+                            <h3>NN to predict stock prices</h3>
+                            <a href="https://github.com/derrix060/PredictionStocks" class="work-popup">
+                                <img src="assets/img/works/artificial-intelligence.jpg" alt="Artificial Brain">
                                 <div class="overlay">
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
                                 </div>
@@ -262,17 +263,70 @@
                     </div>
 
                     <!-- work item -->
-                    <div class="col-md-4 col-sm-6 mix web app graphic">
+                    <div class="col-md-6 col-lg-4 mix web app graphic">
                         <div class="item">
-                            <a href="https://images.pexels.com/photos/42226/artistic-bright-color-colored-42226.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" class="work-popup">
-                                <img src="https://images.pexels.com/photos/42226/artistic-bright-color-colored-42226.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" alt="">
+                            <h3>OneDrive client for linux</h3>
+                            <a href="https://github.com/derrix060/onedriveClient" class="work-popup">
+                                <img src="assets/img/works/cloud.png" alt="Cloud">
                                 <div class="overlay">
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
                                 </div>
                             </a>
                         </div>
                     </div>
-                    
+
+                    <!-- work item -->
+                    <div class="col-md-6 col-lg-4 mix web app graphic">
+                        <div class="item">
+                            <h3>Study to code competitions</h3>
+                            <a href="https://github.com/derrix060/CodeStudy" class="work-popup">
+                                <img src="assets/img/works/code-study.jpg" alt="C++ code">
+                                <div class="overlay">
+                                    <i class="fa fa-arrows-alt" aria-hidden="true"></i>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- work item -->
+                    <div class="col-md-6 col-lg-4 mix web app graphic">
+                        <div class="item">
+                            <h3>Workshop attendance list control</h3>
+                            <a href="https://github.com/derrix060/ChamadaEventosFatec" class="work-popup">
+                                <img src="assets/img/works/workshop.jpg" alt="Workshop">
+                                <div class="overlay">
+                                    <i class="fa fa-arrows-alt" aria-hidden="true"></i>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+
+                    <!-- work item -->
+                    <div class="col-md-6 col-lg-4 mix web app graphic">
+                        <div class="item">
+                            <h3>Solutions to google code jam</h3>
+                            <a href="https://github.com/derrix060/GoogleCodeJam" class="work-popup">
+                                <img src="assets/img/works/google.png" alt="Cloud">
+                                <div class="overlay">
+                                    <i class="fa fa-arrows-alt" aria-hidden="true"></i>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- work item -->
+                    <div class="col-md-6 col-lg-4 mix web app graphic">
+                        <div class="item">
+                            <h3>Android app to blind people</h3>
+                            <a href="https://github.com/CaueP/Hackaton_Fatec_Ipiranga_2016" class="work-popup">
+                                <img src="assets/img/works/android.png" alt="Android icon">
+                                <div class="overlay">
+                                    <i class="fa fa-arrows-alt" aria-hidden="true"></i>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -382,8 +436,6 @@
                         <li><a href="https://github.com/derrix060"><i class="fa fa-github"></i></a></li>
                         <li><a href="http://stackoverflow.com/users/7487154/mario-apra"><i class="fa fa-stack-overflow"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/marioapra/"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href=""><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href=""><i class="fa fa-pinterest"></i></a></li>
                     </ul>
                 </div>                
             </div>
