--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                         <div class="item">
                             <h3>Solutions to google code jam</h3>
                             <a href="https://github.com/derrix060/GoogleCodeJam" class="work-popup">
-                                <img src="assets/img/works/google.png" alt="Cloud">
+                                <img src="assets/img/works/google.jpg" alt="Cloud">
                                 <div class="overlay">
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
                                 </div>
@@ -320,7 +320,7 @@
                         <div class="item">
                             <h3>Android app to blind people</h3>
                             <a href="https://github.com/CaueP/Hackaton_Fatec_Ipiranga_2016" class="work-popup">
-                                <img src="assets/img/works/android.png" alt="Android icon">
+                                <img src="assets/img/works/android.jpg" alt="Android icon">
                                 <div class="overlay">
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
                                 </div>
