fixed wrap content

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             </div>
 
             <div class="portfolio">
-                <div class="row work-items">
+                <div class="row fix work-items">
 
                     <!-- work item -->
                     <div class="col-md-6 col-lg-4 mix web app graphic">
