change cloud pic

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                         <div class="item">
                             <h3>OneDrive client for linux</h3>
                             <a href="https://github.com/derrix060/onedriveClient" class="work-popup">
-                                <img src="assets/img/works/cloud.png" alt="Cloud">
+                                <img src="assets/img/works/cloud.jpg" alt="Cloud">
                                 <div class="overlay">
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
                                 </div>
