add work image background

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <!-- About area ends -->
 
     <!-- Work area starts -->
-    <section id="work" class="works section">
+    <section id="work" class="work-area img-bg section">
         <div class="container">
 
             <div class="row">
